--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>net.haesleinhuepf</groupId>
 		<artifactId>clij-parent-pom</artifactId>
-		<version>0.14.0</version>
+		<version>1.0.0-BETA</version>
 		<relativePath />
 	</parent>
 
