POM: add myself as contributor

--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,9 @@
 	</developers>
 	<contributors>
 		<contributor>
-			<name>none</name>
+			<name>Curtis Rueden</name>
+			<url>https://imagej.net/User:Rueden</url>
+			<properties><id>ctrueden</id></properties>
 		</contributor>
 	</contributors>
 
