--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,13 @@
 	<parent>
 		<groupId>net.haesleinhuepf</groupId>
 		<artifactId>clij-parent-pom</artifactId>
-		<version>1.0.3-BETA</version>
+		<version>1.0.4</version>
 		<relativePath />
 	</parent>
 
 	<groupId>net.haesleinhuepf</groupId>
 	<artifactId>clij-core</artifactId>
-	<version>${clij_core.version}</version>
+	<version>1.0.4</version>
 
 	<name>clij-core</name>
 	<description>clij-core</description>
