Added Peter to contributors

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
 	</developers>
 	<contributors>
 		<contributor>
+			<name>Peter Haub</name>
+			<properties><id>iwbh15</id></properties>
+		</contributor>
+		<contributor>
 			<name>Curtis Rueden</name>
 			<url>https://imagej.net/User:Rueden</url>
 			<properties><id>ctrueden</id></properties>
